@@ -116,6 +116,139 @@ tar 파일이란
 
 톰캣설치
 
+================================================================================
+## 251215 월 ##
+
+1. 톰캣 유저 생성 
+
+sudo useradd -r -m -U -d /opt/tomcat9 -s /bin/false tomcat
+
+ 
+
+2.톰캣이 읽고 쓸수있도록 소유자 그룹을 tomcat으로 변경 후 bin 디렉토리 실행권한 부여 
+
+sudo chown -R tomcat:tomcat /opt/tomcat9
+
+sudo chmod -R u+x /opt/tomcat9/bin
+
+ 
+
+3. 톰캣 systemd 등록 
+
+sudo vi /etc/systemd/system/tomcat.service => 여기vi 창으로 열기 
+
+[Unit]
+Description=Apache Tomcat9
+After=network.target
+
+[Service]
+Type=forking
+
+User=tomcat
+Group=tomcat
+
+Environment="JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64"
+Environment="CATALINA_PID=/opt/tomcat9/temp/tomcat.pid"
+Environment="CATALINA_HOME=/opt/tomcat9"
+Environment="CATALINA_BASE=/opt/tomcat9"
+Environment="CATALINA_OPTS=-Xms512m -Xmx1024m -server -XX:+UseParallelGC"
+Environment="JAVA_OPTS=--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED"
+
+ExecStart=/opt/tomcat9/bin/catalina.sh start
+ExecStop=/opt/tomcat9/bin/catalina.sh stop
+
+[Install]
+WantedBy=multi-user.target
+
+ 
+
+4. systemctl 등록 
+
+sudo systemctl daemon-reexec
+
+sudo systemctl daemon-reload
+
+sudo systemctl enable tomcat
+
+sudo systemctl start tomcat
+
+-------------------------------------------------------------------------
+
+아파치 톰캣(Tomcat)
+- WAS(Web Application Service)라고 하며 아파치 소프트웨어 재단의 
+애플리케이션 서버로서 자바 서블릿을 실행하고 JSP가 포함된 웹 페이지를 
+만들어 준다 
+
+JSP란?
+- html코드에 자바 코드를 삽입하여 서버에서 동적으로 웹페이지를 생성하는 
+서브 스크립팅 기술 
+- 내부적으로 자바 서블릿으로 변환되어 실행된다 !! 
+
+서블릿이란?
+- 자바를 사용하여 웹을 만들기 위한 기술 
+- 클라이언트가 어떠한 요청을 하면 그에 대한 결과를 다시 전송해야 하는데 
+이러한 역할을 서블릿이 한다 
+- 요청을 전송받은 서블릿 컨테이너는 HttpServletRequest, HttpServletResponse  객체를 생성한다 
+- web.xml을 기반으로 사용자가 요청한 URL이 어느 서블릿에 대한 요청인지를 찾는다
+- GET요청이냐 POST요청이냐에 따라서 doGet() 혹은 doPost()를 호출한다 
+- doGet() doPost() 메소드가 동적인 웹페이지를 생성후 HttpServletResponse
+객체에 응답을 보냄 
+
+GET
+- url에 파라메타를 포함시킴
+
+POST
+- url에 파라메타를 포함시키지 않음 즉 url에 노출시키지 않고 
+서버에 요청한다 
+
+WAS와 웹 서버 차이 
+WAS
+- 동적인 콘텐츠(장바구니, 주문, 로그인, 회원가입) 
+를 처리하고 제공하는 서버를 뜻함 
+
+웹서버
+- 정적인 콘텐츠를 제공하는 서버 
+정적인 콘텐츠란? html, css, js, img 파일 
+- http를 이용해 클라이언트에게 웹 페이지를 제공 
+
+
+톰캣 디렉토리 구조
+bin : 톰캣을 실행하고 종료시키는 스크립트 파일이 들어있는곳 
+
+conf : 서버 전체 설정파일 폴더 
+server.xml => 톰켓의 주 설정파일(도메인, 포트)등 접속에 
+관한 설정이 주를 이룬다 
+context.xml => 세션, 쿠키 저장 경로 등을 지정하는 설정파일
+web.xml => 톰캣 환경설정 파일 한글 인코딩 필터 등 
+
+lib : 톰캣구동하는데 필요한 라이브러리(jar)가 들어있다 
+
+logs : 예외 발생 시 로그 저장 
+
+webapps : 웹 애플리케이션 폴더 
+
+temp : 임시 저장용 폴더
+work : jsp 파일을 서블릿형태로 변환한 java 파일과 class 파일이 저장
+
+systemctl
+- 리눅스 시스템에서 systemd 시스템 및 서비스 관리자를 제어하는데 사용한다.
+또한 systemctl은 서비스 시작, 중지, 재시작, 활성화, 비활성화 등을 관리한다. 
+- 시스템 상태를 확인하고 부팅 시 서비스 자동실행을 설정함 
+
+명령종류
+start : 서비스 시작
+stop : 서비스 중지
+status : 서비스 상태 확인 
+restart : 서비스 재시작 
+reload : 서비스를 중지하지 않고 설정 값을 반영
+enable : 시스템이 재부팅하면 자동으로 서비스를 실행하도록 등록 
+disable : enable 한 서비스 해제 
+
+ 
+저작자 표시컨텐츠변경비영리
+========================================================================================
+## 251217 수 ##
+
 
 
 
